--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
   <script src="js/scrollax.min.js"></script>
   
   <script src="js/main.js"></script>
-  <a https://wa.me/+250781169376?text=I'm%20interested%20in%20your%20car%20for%20sale  target="_blank" class="whatsapp_float"><i class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
+  <a href="https:whatsapp.com/wa.me/+250781169376"  target="_blank" class="whatsapp_float"><i class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
     
   </body>
 </html>
