--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
   <script src="js/scrollax.min.js"></script>
   
   <script src="js/main.js"></script>
-  <a href="https://wa.me/+250781169376"  target="_blank" class="whatsapp_float"><i class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
+  <a href="https://wa.me/+250781169376&amp;text=Hi, I would like to get more information.."  target="_blank" class="whatsapp_float"><i class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
     
   </body>
 </html>
