--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
   <script src="js/scrollax.min.js"></script>
   
   <script src="js/main.js"></script>
-  <a href="https://wa.me/+250781169376&amp;text=Hi, I would like to get more information.."  target="_blank" class="whatsapp_float"><i class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
+  <a href="https://api.whatsapp.com/send?phone=+250781169376&text=Hi,%20I%20would%20like%20to%20get%20more%20information.."  target="_blank" class="whatsapp_float"><i class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
     
   </body>
 </html>
