--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="#">iraguhajeanpaul.github.io.com</a></p>
+		            <p><a href="#">iraguhajeanpaul.github.io</a></p>
 	            </div>
 	          </div>
           </div>
